<resources>
    <string name="app_name" translatable="false">UdacityScoreKeeper</string>
    <string name="title">American Football</string>
    <string name="reset">Reset</string>
    <string name="home">Home</string>
    <string name="guest">Guest</string>
    <string name="touchdown">Touchdown</string>
    <string name="field_goal">Field Goal</string>
    <string name="safety">Safety</string>
    <string name="extra">Extra</string>
    <string name="default_score">0</string>


</resources>
