<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/background"
    android:fillViewport="true"
    tools:context=".MainActivity"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/home"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_home_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/default_score"
                    android:textColor="@android:color/white"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeTouchdown"
                    android:text="@string/touchdown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeFieldGoal"
                    android:text="@string/field_goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeSafety"
                    android:text="@string/safety" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="homeExtra"
                    android:text="@string/extra" />
            </LinearLayout>

            <View
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimaryDark" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/guest"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/tv_guest_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/default_score"
                    android:textColor="@android:color/white"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="guestTouchdown"
                    android:text="@string/touchdown" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="guestFieldGoal"
                    android:text="@string/field_goal" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="guestSafety"
                    android:text="@string/safety" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="45dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="guestExtra"
                    android:text="@string/extra" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:onClick="resetScores"
            android:text="@string/reset" />


    </RelativeLayout>

</ScrollView>